--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Automobile Evolution: [Company Name]</h1>
-        <p>A journey through the history of [Company Name] cars and engines.</p>
+        <h1>Automobile Evolution: PORSCHE </h1>
+        <p>A journey through the history of Prosche cars and engines.</p>
     </header>
 
     <div class="founder">
-        <h2>The Founder: [Founder Name]</h2>
-        <p>[Founder Name] was a visionary who [brief description about founder's contributions]. He laid the foundation for [Company Name] in [year] with a passion for innovation and engineering. [Founder's image can be added here]</p>
+        <h2>The Founder:Ferdinand Porsche</h2>
+        <p>Ferdinand Porsche showed a great aptitude for technology and was especially intrigued by electricity from a young age. He laid the foundation for Prosche in [year] with a passion for innovation and engineering. [Founder's image can be added here]</p>
 </div>
 
     <section id="models">
