--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automobile Evolution</title>
+    <title>Porsche journey</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
 
     <div class="founder">
         <h2>The Founder:Ferdinand Porsche</h2>
-        <p>Ferdinand Porsche showed a great aptitude for technology and was especially intrigued by electricity from a young age. He laid the foundation for Prosche in [year] with a passion for innovation and engineering. [Founder's image can be added here]</p>
+        <p>Ferdinand Porsche was a German automotive engineer and founder of the Porsche AG. He is best known for creating the first gasoline electric hybrid vehicle, the Volkswagen Beetle, the Auto Union racing cars, the Mercedes-Benz SS/SSK, and several other important developments and Porsche automobiles.</p>
 </div>
 
     <section id="models">
