--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
     <section id="models">
-        <h2>Car Models Through the Years</h2>
+        <h2>Car Models Through The Years</h2>
         <div class="models-container">
     </section>
     
